--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
         <div class="header-text">
             <p>UI/UX Designer</p>
-            <h1>Hi, I'm <span>Kevin</span><br>Jen From Australia</h1>
+            <h1>Hi, I'm <span>Kamronbek</span><br>Boymirzayev From Uzbekistan </h1>
         </div>
     </div>
 </div>
@@ -136,8 +136,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fas fa-paper-plane"></i> contact@example.com</p>
-                <p><i class="fas fa-phone-square-alt"></i> 0123456789</p>
+                <p><i class="fas fa-paper-plane"></i> boymirzayevkamronbek@gmail.com</p>
+                <p><i class="fas fa-phone-square-alt"></i> 0821057422229</p>
                 <div class="social-icons">
                     <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-twitter-square"></i></a>
